remove count endpoint
